Fix alignment

--- a/client/blocks/plugins-update-manager/styles.scss
+++ b/client/blocks/plugins-update-manager/styles.scss
@@ -83,9 +83,11 @@
 		font-size: 0.875rem;
 		text-decoration: none;
 		color: var(--studio-gray-60);
+		line-height: 1.5;
 	}
 
 	table {
+
 		th,
 		td {
 			font-size: 0.875rem;
@@ -104,6 +106,10 @@
 
 			&.last-update {
 				min-width: 200px;
+
+				> div {
+					margin-top: -5px;
+				}
 			}
 		}
 	}
